--- a/FUNDING.yml
+++ b/FUNDING.yml
@@ -1,3 +1,3 @@
 # These are supported funding model platforms
 
-custom: ["https://www.paypal.com/pools/c/8l1IG1xSZY", pacmax.org]
+custom: ["https://www.paypal.com/pools/c/8l1IG1xSZY"]
